# bus-info

./: pyproject.toml  requirements.txt
businfo/: manage.py
businfo/businfo/: asgi.py  settings.py  urls.py  wsgi.py
businfo/livebus/: apps.py  urls.py  views.py
businfo/livebus/static/livebus/: styles.css
businfo/livebus/templates/livebus/: bus_info.html
