[tool.poetry]
name = "bus-info"
version = "0.1.0"
description = ""
authors = ["Ilias Kalemanis <kalimanis64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2025.1"
requests = "^2.32.3"
datetime = "^5.5"
django = "^5.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
